--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- SplashActivity -->
+    <string name="error_unknown">알 수 없는 오류가 발생했습니다.</string>
+    <string name="error_network">네트워크 연결을 확인해주세요.</string>
+    <string name="error_retry">다시 시도</string>
+    <string name="error_guest_login_failed">비회원 로그인에 실패했어요.</string>
+    <string name="guest_login_success">비회원 로그인 성공</string>
+    <string name="login_failed">로그인에 실패했습니다.</string>
+    <string name="login_success">로그인 성공</string>
     <string name="start_title">교회의 모든 소통</string>
     <string name="start_subtitle">테바에서 시작해요!</string>
     <string name="start_button">시작하기</string>
